# unibinlog

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.rst
etc/cmake/: CheckFloatingPointFormat.cmake
include/unibinlog/: basic_types.h  buffer.h  chksum.h  debug.h  error.h  log_column.h  lowlevel.h  memory.h  platform.h  types.h  unibinlog.h
src/: CMakeLists.txt  buffer.c  buffer_writer.c  chksum.c  config.h.in  debug.c  error.c  fmemopen.c  log_column.c  lowlevel.c  typeinfo.c  utils.c  utils.h
test/: CMakeLists.txt  common.c  fmemopen.c  fmemopen.h  test_buffer.c  test_buffer_writer.c  test_chksum.c  test_log_column.c  test_lowlevel.c  test_types.c
